bug fixed: gap between svg and its father element

--- a/UI/static/dashboard/scss/horizon.scss
+++ b/UI/static/dashboard/scss/horizon.scss
@@ -1673,6 +1673,9 @@ label.log-length {
   border-style: solid;
   border-color: #dedede;
 }
+#heat_topology svg {
+  margin-bottom: -5px;
+}
 
 #detail_box {
   position: absolute;
